--- a/site/about.html
+++ b/site/about.html
@@ -4,15 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>title</title>
+        <title>about me</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-		<h1>about me</h1>
-		
-		<p>im matty</p>
-		
-		<p>i like wresting, computers, knitting and crochet</p>
-        <script src="js/script.js"></script>
-    </body>
+<h1>about me</h1>
+<p>im matty</p>
+<p>i like wresting, computers, knitting and crochet</p>
+<script src="js/script.js"></script>
+</body>
 </html>
