--- a/website/header.html
+++ b/website/header.html
@@ -4,12 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>test title</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <title>#(title)</title>
+        #(styles)
     </head>
     <body>
-<h1>heading</h1>
-<p>this is a paragraph</p>
-<script src="js/script.js"></script>
-</body>
-</html>
