--- a/site/test.html
+++ b/site/test.html
@@ -10,7 +10,7 @@
     <body>
         <h1>heading</h1>
         
-        <p>will is copy???</p>
+        <p>will it copy???</p>
         <script src="js/script.js"></script>
     </body>
 </html>
