--- a/website/test.html
+++ b/website/test.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>test title</title>
-        <link rel="stylesheet" href="css/styles.css">
+        #(styles)
     </head>
     <body>
         <h1>heading</h1>
         
-        <p>will is copy???</p>
-        <script src="js/script.js"></script>
+        <p>will it copy???</p>
+        #(scripts)
     </body>
 </html>
 
