--- a/site/test-post.html
+++ b/site/test-post.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>#(title)</title>
-    #(styles)
+    <title>test  post</title>
+    <link rel="stylesheet" href="css/styles.css"><link rel="stylesheet" href="css/bulma.min.css">
 </head>
 <body>
     <div class="container">
@@ -15,3 +15,10 @@
             <a href="blog.html" class="navbar-item">blog</a>
         </nav>
         <div class="content">
+<h1>Test Post</h1>
+<p>this is a test post</p>
+</div>
+</div>
+<script src="js/script.js"></script>
+</body>
+</html>
