--- a/site/about.html
+++ b/site/about.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>about me</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>about me</title>
+    <link rel="stylesheet" href="css/styles.css"><link rel="stylesheet" href="css/bulma.min.css">
+</head>
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <a href="index.html" class="navbar-item">home</a>
+            <a href="about.html" class="navbar-item">about</a>
+            <a href="blog.html" class="navbar-item">blog</a>
+        </nav>
+        <div class="content">
 <h1>about me</h1>
 <p>im matty</p>
 <p>i like wresting, computers, knitting and crochet</p>
+</div>
+</div>
 <script src="js/script.js"></script>
 </body>
 </html>
