--- a/site/blog.html
+++ b/site/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>#(title)</title>
-    #(styles)
+    <title>blog</title>
+    <link rel="stylesheet" href="css/styles.css"><link rel="stylesheet" href="css/bulma.min.css">
 </head>
 <body>
     <div class="container">
@@ -15,3 +15,12 @@
             <a href="blog.html" class="navbar-item">blog</a>
         </nav>
         <div class="content">
+<div class="card">
+    <div class="card-content content"><a href="test-post.html"><h1>test  post</h1></a><p>this is a short description</p></div>
+</div>
+
+</div>
+</div>
+<script src="js/script.js"></script>
+</body>
+</html>
