--- a/site/test.html
+++ b/site/test.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>test title</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css"><link rel="stylesheet" href="css/bulma.min.css">
     </head>
     <body>
         <h1>heading</h1>
