--- a/Tests/TestData/website/post.html
+++ b/Tests/TestData/website/post.html
@@ -1,3 +1,3 @@
-<div class="card">
+<div class="card column">
     <div class="card-content content"><a href="#(slug).html"><h1>#(title)</h1></a><p>#(desc)</p></div>
 </div>
