--- a/site/blog.html
+++ b/site/blog.html
@@ -16,6 +16,12 @@
         </nav>
         <div class="content">
 <div class="card">
+    <div class="card-content content"><a href="test-post-2.html"><h1>test  post 2</h1></a><p>this is a short description</p></div>
+</div>
+<div class="card">
+    <div class="card-content content"><a href="test-post-3.html"><h1>test  post 3</h1></a><p>this is a short description</p></div>
+</div>
+<div class="card">
     <div class="card-content content"><a href="test-post.html"><h1>test  post</h1></a><p>this is a short description</p></div>
 </div>
 
